1.0.5 Code quality improvements